# systematic-trading-platform

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  GEMINI.md  README.md  TODO.md  config.yaml  hedge_fund_full_stack.py  hedge_fund_guide.md  main.py  main_demo.py  pyproject.toml  requirements.txt
data/: forecasts.db  target_weights.db  trading_system.db
src/: alpaca_plugin.py  alpha_engine.py  backtester_demo.py  data_platform.py  execution_handler.py  live_demo.py  live_runner.py  portfolio_manager.py
src/alpha/: backtest_event_driven.py  backtest_vectorized.py  combiner.py  features.py  model.py  processing.py  (+1 more)
tests/: conftest.py  test_alpaca_plugin.py  test_alpha_backtest.py  test_alpha_backtest_event_driven.py  test_alpha_concurrency.py  test_alpha_engine.py  test_alpha_features.py  test_alpha_model.py  test_alpha_processing.py  test_alpha_sophistication.py  test_alpha_utils.py  test_arctic_persistence.py  test_backtest_engine.py  test_broker_gateway.py  test_config.py  test_coverage_gap.py  test_data_adjustment.py  test_data_ca.py  test_data_depth.py  test_data_events.py  test_data_ism.py  test_data_market.py  test_data_pit.py  test_data_platform.py  test_data_returns.py  test_data_symbology.py  test_data_validation.py  test_events.py  test_execution.py  test_execution_async.py  test_feature_dependencies.py  test_full_system.py  test_initialization.py  test_integration.py  test_live_demo_bugs.py  test_live_runner.py  test_portfolio_execution.py  test_portfolio_manager.py  test_portfolio_robustness.py  test_risk_factors.py  (+1 more)
(+55 files in other folders)
